completed snake game

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Snake</title>
-	<link rel="stylesheet" type="text/css" href="snake.css">
-</head>
-<body>
-	
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <title>Danger Noodle Game</title> 
+    <link rel="stylesheet" href="snake.css"> 
+</head> 
+<body> 
+<a onclick="location.reload()">Reload the game</a> 
 
-	<script type="text/javascript" src="snake.js"></script>
+<hr width="330px"> 
+<h1 style="font-size:15px; width: 400px">W = Up, A = Left, S = Down, D = Right SPACEBAR = PAUSE/PLAY, R = Restart</h1> 
 
-</body>
+<script src="snake.js"></script> 
+</body> 
 </html>
